--- a/exercises/03-Type-Radio/index.html
+++ b/exercises/03-Type-Radio/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>4Geeks Academy</title>
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>4Geeks Academy</title>
-</head>
-
-<body>
-    <form>
-        <!-- your code here -->
-    </form>
-</body>
-
+	<body>
+		<form>
+			<input type="radio" name="gender" id="Male" value="Male" />
+			<label for="Male">Male</label>
+			<input type="radio" name="gender" id="Female" value="Female" />
+			<label for="Female">Female</label>
+			<br />
+			<input type="radio" name="sexual-orientation" id="Heterosexual" value="Heterosexual" />
+			<label for="Heterosexual">Heterosexual</label>
+			<input type="radio" name="sexual-orientation" id="LGBTI" value="LGBTI" />
+			<label for="LGBTI">LGBTI</label>
+		</form>
+	</body>
 </html>
