--- a/exercises/06-Replicate-simple-form/index.html
+++ b/exercises/06-Replicate-simple-form/index.html
@@ -1,22 +1,86 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>4Geeks Academy</title>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>4Geeks Academy</title>
+		<style>
+			body {
+				display: flex;
+				justify-content: center;
+				font-size: 20px;
+			}
 
-    <style>
-        /* your code here */
-        
-    </style>
-</head>
+			thead {
+				background-color: rgb(190, 140, 238);
+				height: 10px;
+			}
+		</style>
+	</head>
 
-<body>
-    <form>
-        <!-- your code here -->
-        
-    </form>
-</body>
-
+	<body>
+		<form>
+			<table border="1">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Value</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Name</td>
+						<td><input type="text" /></td>
+					</tr>
+					<tr>
+						<td>Sex</td>
+						<td>
+							<input type="radio" id="Male" name="gender" value="Male" />
+							<label for="Male">Male</label>
+							<br />
+							<input type="radio" id="Female" name="gender" value="Female" />
+							<label for="Female">Female</label>
+						</td>
+					</tr>
+					<tr>
+						<td>Eye color</td>
+						<td>
+							<select id="eyeColor" name="eyeColor">
+								<option value="blue">Blue</option>
+								<option value="brown">Brown</option>
+								<option value="green">Green</option>
+								<option value="hazel">Hazel</option>
+								<!-- Add more options as needed -->
+							</select>
+						</td>
+					</tr>
+					<tr>
+						<td>Check all that apply</td>
+						<td>
+							<input type="checkbox" id="height" name="chars" value="over-6-feet" />
+							<label for="height">Over 6 feet tall</label>
+							<br />
+							<input type="checkbox" id="weight" name="chars" value="over-200-pounds" />
+							<label for="weight">Over 200 pounds</label>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2">
+							Describe your athletic ability:
+							<br />
+							<textarea name="message" id="message" rows="4" cols="50"></textarea>
+						</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td colspan="2" align="center">
+							<input type="submit" value="Enter my information" />
+						</td>
+					</tr>
+				</tfoot>
+			</table>
+		</form>
+	</body>
 </html>
